Fixed alignment and padding of some components.

--- a/Basestation_Software.Web/Core/Layout/MainLayout.razor.css
+++ b/Basestation_Software.Web/Core/Layout/MainLayout.razor.css
@@ -1,8 +1,3 @@
-.page {
-    min-width: 1280px; /* Specify your desired minimum width */
-    min-height: 720px; /* Specify your desired minimum height */
-}
-
 .sidebar {
     background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
