--- a/Basestation_Software.Web/wwwroot/app.css
+++ b/Basestation_Software.Web/wwwroot/app.css
@@ -1,11 +1,5 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin: 1rem;
-}
-
-.page {
-    min-width: 1280px; /* Specify your desired minimum width */
-    min-height: 720px; /* Specify your desired minimum height */
 }
 
 .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
@@ -31,7 +25,7 @@ a, .btn-link {
 }
 
 .content {
-    padding-top: 1.1rem;
+    padding-top: 1.0rem;
 }
 
 h1:focus {
